--- a/client/index.html
+++ b/client/index.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="MIAC is the kanban-style project mastering tool for everyone in MIAC" />
+  <meta name="description" content="Dелай is the kanban-style project mastering tool for everyone in Dелай" />
   <title>Dелай</title>
   <link rel="icon" href="/favicon.ico" />
-  <link rel="apple-touch-icon" href="/logo192.png" />
+  <link rel="apple-touch-icon" href="/mini_logo.png" />
   <link rel="manifest" href="/manifest.json" />
 </head>
 
